package t1;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class MainWarGame {



}