package t1;


/**
*
* @author Leo lvcdb, Adrien G
*/

 enum Ressources {

	private  int REWARD;


	/**
	* //TODO
	*
	* @return :void:
	**/
 	private void Ressources() ;

	/**
	* //TODO
	*
	* @param reward : int: 
	*
	* @return :void:
	**/
 	public void setReward(int reward) ;

	/**
	* //TODO
	*
	* @return :int:
	**/
 	public int getReward() {

		return 0;
	}


}