package t1.board;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class EndGameByBoard {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void EndGameByBoard() ;


}