package t1.board;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class FarmBoard implements Board {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void FarmBoard(int witdh, int height) ;


}