package t1.board;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class WarBoard implements Board {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void WarBoard(int witdh, int height) ;


}