package t1.character;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class CharacterException {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void CharacterException() ;


}