package t1.character;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class Worker implements Character {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void Worker(Tile position, Player owner) ;

	/**
	* //TODO
	*
	* @param i : int: 
	*
	* @return :void:
	**/
 	public void receiveReward(int i) ;


}