package t1.gamemode;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class WarGame implements Game {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void WarGame(int width, int height, int nbRound) ;

	/**
	* //TODO
	*
	* @return :String:
	**/
 	public String playOneRound(Player thePlayer, boolean isRandom) {

		return "";
	}

	/**
	* //TODO
	*
	* @param thePlayer : Player: 
	*
	* @return :String:
	**/
 	public String randomFirstAction(Player thePlayer) {

		return "";
	}


}