package t1.player;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class FarmPlayer implements Player {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void FarmPlayer(String name, Board board, boolean isRandom) ;

	/**
	* //TODO
	*
	* @return :String:
	**/
 	public String doNothing() {

		return "";
	}

	/**
	* //TODO
	*
	* @return :String:
	**/
 	public String deployCharact(int size, int x, int y) {

		return "";
	}

	/**
	* //TODO
	*
	* @return :int:
	**/
 	public int getPoint() {

		return 0;
	}


}