package t1.player;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class PlayerException {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void PlayerException() ;


}