package t1.tile;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class WrongTileException {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void WrongTileException() ;


}