package t1.util;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class Clear {


	/**
	* //TODO
	*
	* @return :void:
	**/
 	public void Clear() ;


}