package t1.util;


/**
*
* @author Leo lvcdb, Adrien G
*/

 class Input {

	private static  Scanner scanner;



}